// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renderer:Switch Switch basic props 1`] = `
<div>
  <div
    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel __PRISMUI_COMPONENT_CLASS_PREFIX__Panel--default __PRISMUI_COMPONENT_CLASS_PREFIX__Panel--form"
    data-role="container"
  >
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-heading"
    >
      <h3
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-title"
      >
        <span
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
        >
          <span>
            表单
          </span>
        </span>
      </h3>
    </div>
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-body"
    >
      <form
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form __PRISMUI_COMPONENT_CLASS_PREFIX__Form--normal"
        novalidate=""
      >
        <input
          style="display: none;"
          type="submit"
        />
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-item __PRISMUI_COMPONENT_CLASS_PREFIX__Form-item--normal block"
          data-amis-name="switch"
          data-role="form-item"
        >
          <label
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-label"
          >
            <span>
              <span
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
              >
                <span>
                  开关
                </span>
              </span>
            </span>
          </label>
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__SwitchControl __PRISMUI_COMPONENT_CLASS_PREFIX__Form-control is-thin"
          >
            <label
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Switch is-checked"
              data-role="switch"
            >
              <input
                checked=""
                theme="cxd"
                type="checkbox"
              />
              <span
                class="text"
              >
                已开启飞行模式
              </span>
              <span
                class="slider"
              />
            </label>
            <span
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Switch-option"
            >
              switch
            </span>
          </div>
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`Renderer:Switch Switch size 1`] = `
<div>
  <div
    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel __PRISMUI_COMPONENT_CLASS_PREFIX__Panel--default __PRISMUI_COMPONENT_CLASS_PREFIX__Panel--form"
    data-role="container"
  >
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-heading"
    >
      <h3
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-title"
      >
        <span
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
        >
          <span>
            表单
          </span>
        </span>
      </h3>
    </div>
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-body"
    >
      <form
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form __PRISMUI_COMPONENT_CLASS_PREFIX__Form--normal"
        novalidate=""
      >
        <input
          style="display: none;"
          type="submit"
        />
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-item __PRISMUI_COMPONENT_CLASS_PREFIX__Form-item--normal"
          data-amis-name="switch"
          data-role="form-item"
        >
          <label
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-label"
          >
            <span>
              <span
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
              >
                <span>
                  开关
                </span>
              </span>
            </span>
          </label>
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__SwitchControl __PRISMUI_COMPONENT_CLASS_PREFIX__Form-control is-thin"
          >
            <label
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Switch __PRISMUI_COMPONENT_CLASS_PREFIX__Switch--sm"
              data-role="switch"
            >
              <input
                theme="cxd"
                type="checkbox"
              />
              <span
                class="text"
              />
              <span
                class="slider"
              />
            </label>
            <span
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Switch-option"
            />
          </div>
        </div>
      </form>
    </div>
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-footerWrap"
    >
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-btnToolbar __PRISMUI_COMPONENT_CLASS_PREFIX__Panel-footer"
      >
        <button
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Button __PRISMUI_COMPONENT_CLASS_PREFIX__Button--primary __PRISMUI_COMPONENT_CLASS_PREFIX__Button--size-default"
          type="submit"
        >
          <span>
            提交
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;
